src/templates/network/ingress-host-rule-definition.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch-host
spec:
  rules:
  - host: wear.my-domain.com
    http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 8080
  - host: watch.my-domain.com
    http:
      paths:
      - backend:
          serviceName: watch-service
          servicePort: 8080
